# netspec

./: .gitignore  .travis.yml  LICENSE  NetSpec.hs  README.md  netspec.cabal  stack.yaml
NetSpec/: Json.hs  Text.hs
NetSpec/Examples/: BlackjackClient.hs  Chat.hs  Echo.hs  Relay.hs  Telnet.hs
Network/: NetSpec.hs
Network/NetSpec/: ByteString.hs  Json.hs  Text.hs
Network/NetSpec/Examples/: Blackjack.hs  BlackjackClient.hs  BlackjackData.hs  BlackjackServer.hs  Chat.hs  Echo.hs
examples/: BlackjackClient.hs  BlackjackData.hs  BlackjackServer.hs  Chat.hs  Echo.hs  Relay.hs  RockPaperScissors.hs  Telnet.hs
src/: NetSpec.hs
src/NetSpec/: ByteString.hs  Json.hs  Text.hs
src/Network/: NetSpec.hs
src/Network/NetSpec/: ByteString.hs  Json.hs  Text.hs
test/: Main.hs
