name:                netspec
version:             0.2.1.0
synopsis:            Simplify static Networking tasks

homepage:            http://github.com/DanBurton/netspec
author:              Dan Burton
maintainer:          danburton.email@gmail.com

license:             BSD3
license-file:        LICENSE
copyright:           (c) 2012 Dan Burton

description:
  A Networking library for static Networking tasks.
  .
  To learn about how to use this library in general,
  see <http://github.com/DanBurton/netspec#readme>


category:            Network
build-type:          Simple
stability:           experimental
cabal-version:       >=1.8

extra-source-files:
    README.md
  , examples/*.hs

library
  exposed-modules:
    Network.NetSpec,
    Network.NetSpec.Json,
    Network.NetSpec.Text,
    Network.NetSpec.ByteString
  build-depends:
    base >= 4 && < 4.9,
    aeson >= 0.9 && < 0.10,
    network >= 2.3 && < 2.7,
    mtl >= 2.0 && < 2.3,
    template-haskell >= 2.7 && < 2.11,
    transformers >= 0.2 && < 0.5,
    text >= 0.11 && < 1.3,
    binary >= 0.5 && < 0.8,
    bytestring >= 0.9 && < 0.11
  hs-source-dirs: src

test-suite blackjack-test
  hs-source-dirs: examples, test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends: base, netspec, random-shuffle, async

source-repository head
  type:     git
  location: git://github.com/DanBurton/netspec.git
